==================================================================================================
Changes for 2.9.2 release 
==================================================================================================
- Bug Fix: IPC errors when using RFM DMA mode.  Modified controller.c to verify that RFM DMA
  was complete before triggering user applications. 
==================================================================================================
Changes for 2.9.1 release 
==================================================================================================
- Bug Fix (811): NDS1 Version 12.2: Fix byte-ordering in 'status channels 2' 
- Added individual channel reset to BURT value capability for SDF_TABLE display.
- Bug Fix (810): Code not properly resetting SW1S and SW2S for FMC parts when in local mode.
  Operation of the FMC parts was not affected by this bug, but caused issues with SDF
  reporting.
- Added read file error checking for filter switch settings (somehow, some settings in file >16
  bits. SDF code now truncates to 16bits and reports a read error to SDF table.
- Bug Fix (796): Added paging capability to SDF_TABLE to allow listing of up to 15000 items.
  Also cleaned up BURT file reader line parsing to pick up on strings.  Was having problems
  when strings started with a number and a string contained more than one word.
- Bug Fix (803): Modified Makefile.linux to not add SDF EPICS variables to the autoBurt.req file.
- Bug Fix (790): Added difference calc and EPICS records to provide diff between present setpoint
  and BURT request as added feature to SDF. As part of this fix, also:
	- Added FILTER_MODULE_SWSTR EPICS record for each filter module. This is a string 
	  representation of the filter module switch settings. 
  	- Changed the way filter switch setting errors are reported.
			CHANNEL NAME	      BURT		PRESENT			DIFF
		- Old: FILTER_NAME_SW1S	  Hex of BURT set   Hex of Present set