@@ -141,6 +141,8 @@ sub parseParams {
         			die "Invalid remote_ipc_port specified in cdsParamters\n" unless $::remoteIPCport >= 0;
 			} elsif ($spp[0] eq "rfm_dma") {
 				$::rfmDma = 1;
+			} elsif ($spp[0] eq "rfm_delay") {
+				$::rfmDelay = 1;
 			} elsif ($spp[0] eq "flip_signals") { 
 				$::flipSignals = $spp[1];
 			} elsif ($spp[0] eq "biquad") { 
