@@ -2,7 +2,11 @@
 Changes for 2.9.2 release 
 ==================================================================================================
 - Bug Fix: IPC errors when using RFM DMA mode.  Modified controller.c to verify that RFM DMA
-  was complete before triggering user applications. 
+  was complete before triggering user applications. (NOTE: This still just a compile option for
+  testing and not available for general use yet.)
+- Added a 1 cycle delay for RFM senders.  This is specifically for use in RFM sender models
+  that run too long (>45usec) for transmission to reach end/corner in time. This delay is set on
+  a per model basis by adding the line rfm_delay to the Parameter block.
 ==================================================================================================
 Changes for 2.9.1 release 
 ==================================================================================================
